--- a/styles/app.css
+++ b/styles/app.css
@@ -45,7 +45,7 @@ main {
     background: var(--white);
     padding: 5px 0 40px 0;
     border-radius: 25px;
-    /* border-radius: 50%; */
+    box-shadow: 8px 8px 10px 1px rgba(31, 50, 81, .05);
 }
 
 .card-image {
@@ -72,7 +72,7 @@ main {
 }
 
 .card-content>h2 {
-    margin: 40px 10px 0 10px;
+    margin: 40px 20px 0 20px;
     text-align: center;
     font-weight: 600;
 }
